--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,30 @@
 .App {
   text-align: center;
+  background-color: black;
+  color: aliceblue;
+  padding: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  background-color: rgb(8, 158, 245);
   color: white;
+  border-style: none;
+  height: 25px;
+  width: 70px;
+  border-radius: 0.5rem;
+  font-size: medium;
 }
 
-.App-link {
-  color: #61dafb;
+ol {
+  text-align: center;
+  display:contents;
+  justify-content: center; 
+  list-style-position: inside;
+  display:inline-flexbox;
+  width: fit-content;
+  padding: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+textarea {
+  margin-top: 10px;
 }
